--- a/components/flex.module.scss
+++ b/components/flex.module.scss
@@ -2,9 +2,11 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  gap: var(--gap);
 }
 
 .stack {
   display: flex;
   flex-direction: column;
+  gap: var(--gap);
 }
